// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MainNav > should not render hidden sub list items 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft dNgwqX"
    data-rc="MainNav"
  >
    <ul
      class="sc-gsnScm eQnjpn"
    >
      <li
        class="sc-bretMz dBffNv"
        data-rc="MainNavLink"
      >
        <a
          class="sc-crXcXV cxxyeD"
          href="/"
        >
          Visible Item
        </a>
      </li>
      <li
        class="sc-bretMz dBffNv"
        data-rc="MainNavItem"
        data-state="closed"
      >
        <button
          class="sc-kDDqET cHUMF"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-hKMtDE bwbOno sc-iqcnOu kngPEJ"
            data-rc="LargeSystemIcon.ChevronYellow"
          >
            <svg
              height="7"
              viewBox="0 0 12 7"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
                fill="#F9C000"
                fill-rule="nonzero"
              />
            </svg>
          </span>
        </button>
        <div
          class="sc-ewahw dDeaeb"
        />
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MainNav > should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bczSft dNgwqX"
    data-rc="MainNav"
  >
    <ul
      class="sc-gsnScm eQnjpn"
    >
      <li
        class="sc-bretMz dBffNv"
        data-rc="MainNavLink"
      >
        <a
          class="sc-crXcXV cxxyeD"
          href="/"
        >
          Visible Item
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MainNav should not render hidden sub list items 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe fqQwmU"
    data-rc="MainNav"
  >
    <ul
      class="sc-gswNZR jdAFhG"
    >
      <li
        class="sc-bqWxrE dJvvDl"
        data-rc="MainNavLink"
      >
        <a
          class="sc-csuSiG lnZrdg"
          href="/"
        >
          Visible Item
        </a>
      </li>
      <li
        class="sc-bqWxrE dJvvDl"
        data-rc="MainNavItem"
        data-state="closed"
      >
        <button
          class="sc-kDvujY iVcEOy"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-hLBbgP fEYWcg sc-ipEyDJ guhhVG"
            data-rc="LargeSystemIcon.ChevronYellow"
          >
            <svg>
              chevron-yellow.svg
            </svg>
          </span>
        </button>
        <div
          class="sc-eDWCr haeOkf"
        />
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`MainNav should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXHqe fqQwmU"
    data-rc="MainNav"
  >
    <ul
      class="sc-gswNZR jdAFhG"
    >
      <li
        class="sc-bqWxrE dJvvDl"
        data-rc="MainNavLink"
      >
        <a
          class="sc-csuSiG lnZrdg"
          href="/"
        >
          Visible Item
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
